--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.7.0",
     "nuxt": "^3.14.159",
+    "pinia": "^2.2.6",
     "vue": "latest",
     "vue-router": "latest"
   },
