--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nuxt": "^3.14.159",
     "pinia": "^2.2.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.6.1",
