--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier": "^3.3.3",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.4"
+  },
+  "engines": {
+    "node": "^18.12 || ^20.9 || >= 22.0"
   }
 }
